Fix pagination on small screens

--- a/css/structure.css
+++ b/css/structure.css
@@ -140,6 +140,9 @@ body {
 	text-align: center;
 	}
 
+.paginate-container {
+	padding: 0;
+	}
 
 /* Footer ---------------- */
 
